# axum78

./: .gitignore  Cargo.toml  config.example.ini
src/: base78.md  base78.rs  lib.rs
src/apigame/: mod.rs
src/apigame/mock/: game_state.rs  mod.rs
src/apimes/: mod.rs
src/apimes/wework/: auth.rs
src/apiopen/: mod.rs
src/apiopen/wework/: auth.rs  callback.rs  callback.rs.bak  mod.rs
src/apisvc/: mod.rs
src/apisvc/backsvc/: datasync.rs  datasync_mysql.rs  mod.rs  synclog.rs  synclog_mysql.rs
src/apitest/: mod.rs
src/apitest/testmenu/: testtb.rs
src/base_api/: base_api.md  base_api.rs  mod.rs
src/context/: auth_middleware.md  auth_middleware.rs  context.md  context.rs  lovers_state.rs  mod.rs  verify.md  verify.rs
src/daily_quiz/: mod.rs
src/memcached/: client.rs  mod.rs
src/proto/: mod.rs
src/response/: mod.rs  response.rs
src/router/: mod.rs  registry.rs  router.rs
src/server/: mod.rs  server.rs
src/sync/: data_sync.rs  doc_test_plan.rs  e2e_sync_test.rs  mod.rs  sync_api.rs  sync_client_test.rs
tests/: mysql_plan1_test.rs  mysql_test.rs  sync_test.rs  sync_test.rs.bak
