[package]
name = "axum78"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
axum-core = "0.4"
http = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf
prost = "0.13"

# 异步 trait
async-trait = "0.1"

# 数据库
datastate = { git = "https://github.com/www778878net/datastate.git" }
base = { git = "https://github.com/www778878net/rustbase.git" }
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = "25"
md5 = "0.7"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
once_cell = "1.19"
urlencoding = "2.1"
url = "2.5"
sha1 = "0.10"
rand = "0.8"
regex = "1"

# HTTP 客户端 (用于同步)
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# Memcached 客户端 (禁用tls，避免openssl依赖)
memcache = { version = "0.18", default-features = false }

[dev-dependencies]
serial_test = "3"

[build-dependencies]
